logs/log-error.log
[2018-03-17 12:09:15.308] [ERROR] errorLog - === CAUGHT EXCEPTION === D:\dev_myz\wepoem_m\routes\api_v1.js:36
	var query = 'SELECT * FROM ?? ORDER BY id LIMIT ?,?',[`wp_poems`,(page-1)*size,size];
	                                                      ^^^^^^^^^^

SyntaxError: Unexpected template string
    at createScript (vm.js:74:10)
    at Object.runInThisContext (vm.js:116:10)
    at Module._compile (module.js:533:28)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:503:32)
    at tryModuleLoad (module.js:466:12)
    at Function.Module._load (module.js:458:3)
    at Module.require (module.js:513:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (D:\dev_myz\wepoem_m\app.js:46:20)
[2018-03-17 12:10:12.781] [ERROR] errorLog - === CAUGHT EXCEPTION === D:\dev_myz\wepoem_m\routes\api_v1.js:36
	var query = 'SELECT * FROM ?? ORDER BY id LIMIT ?,?',[`wp_poems`,(page-1)*size,size];
	                                                      ^^^^^^^^^^

SyntaxError: Unexpected template string
    at createScript (vm.js:74:10)
    at Object.runInThisContext (vm.js:116:10)
    at Module._compile (module.js:533:28)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:503:32)
    at tryModuleLoad (module.js:466:12)
    at Function.Module._load (module.js:458:3)
    at Module.require (module.js:513:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (D:\dev_myz\wepoem_m\app.js:46:20)
[2018-03-17 12:17:30.850] [ERROR] errorLog - === CAUGHT EXCEPTION === TypeError: Cannot read property '0' of undefined
    at Query._callback (D:\dev_myz\wepoem_m\routes\api_v1.js:40:22)
    at Query.Sequence.end (D:\dev_myz\wepoem_m\node_modules\_mysql@2.15.0@mysql\lib\protocol\sequences\Sequence.js:88:24)
    at Query.ErrorPacket (D:\dev_myz\wepoem_m\node_modules\_mysql@2.15.0@mysql\lib\protocol\sequences\Query.js:90:8)
    at Protocol._parsePacket (D:\dev_myz\wepoem_m\node_modules\_mysql@2.15.0@mysql\lib\protocol\Protocol.js:279:23)
    at Parser.write (D:\dev_myz\wepoem_m\node_modules\_mysql@2.15.0@mysql\lib\protocol\Parser.js:76:12)
    at Protocol.write (D:\dev_myz\wepoem_m\node_modules\_mysql@2.15.0@mysql\lib\protocol\Protocol.js:39:16)
    at Socket.<anonymous> (D:\dev_myz\wepoem_m\node_modules\_mysql@2.15.0@mysql\lib\Connection.js:103:28)
    at emitOne (events.js:115:13)
    at Socket.emit (events.js:210:7)
    at addChunk (_stream_readable.js:252:12)
